@@ -6,8 +6,10 @@ cryptsetup (2:1.0.2+1.0.3-rc2-2) unstable; urgency=low
   * ran ispell against doc files in debian/, fixed many typos
   * change /usr/share/cryptsetup to /lib/cryptsetup in crypttab.5.txt
     (closes: #354910)
+  * add --build (and maybe even --host) to configure flags, for
+    cross-compiling.
 
- -- Jonas Meurer <mejo@debian.org>  Thu,  2 Mar 2006 12:30:26 +0100
+ -- Jonas Meurer <mejo@debian.org>  Fri,  3 Mar 2006 16:06:03 +0100
 
 cryptsetup (2:1.0.2+1.0.3-rc2-1) unstable; urgency=low
 
